--- a/ace-user-base-api-web/src/main/resources/application.properties
+++ b/ace-user-base-api-web/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.application.name=ace-user-base-api-web
-spring.profiles.include=nacos,redis
-server.port=8080
-#spring.aop.auto=true
-#spring.aop.proxy-target-class=true
+spring.profiles.include=datasource,mybatis,nacos-registry,tomcat,actuator
