--- a/ace-user-base-api-client-autoconfigure/pom.xml
+++ b/ace-user-base-api-client-autoconfigure/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ace-user-base-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
