--- a/ace-user-base-api-web/pom.xml
+++ b/ace-user-base-api-web/pom.xml
@@ -5,18 +5,24 @@
     <parent>
         <artifactId>ace-user-base-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ace-user-base-api-web</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.ace</groupId>
-            <artifactId>ace-fw-json</artifactId>
+            <artifactId>ace-user-base-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ace</groupId>
-            <artifactId>ace-fw-redisson-autoconfigure</artifactId>
+            <artifactId>ace-user-base-define</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-ms-application</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ace</groupId>
@@ -28,16 +34,82 @@
         </dependency>
         <dependency>
             <groupId>org.ace</groupId>
-            <artifactId>ace-user-base-api</artifactId>
+            <artifactId>ace-fw-restful-base-api-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-restful-base-api-web-mybatis-plus-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-mybatis-plus-extension</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-data</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-log4j2-autoconfigure</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>objenesis</artifactId>
+                    <groupId>org.objenesis</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
@@ -55,75 +127,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <!-- 复制生成的jar包到其他位置,方便使用jib插件制作docker image -->
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-lib-src-webapps</id>
-                        <phase>package</phase>
-                        <configuration>
-                            <tasks>
-                                <!-- 你将要拷贝的位置 -->
-                                <copy todir="target/jib/ace/${project.name}">
-                                    <!-- 从哪里拷贝 -->
-                                    <fileset dir="${project.build.directory}">
-                                        <!-- 拷贝内容 -->
-                                        <include name="*.jar"/>
-                                    </fileset>
-                                </copy>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <sendCredentialsOverHttp>true</sendCredentialsOverHttp>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
-            <!--使用jib插件-->
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>2.1.0</version>
-                <configuration>
-                    <allowInsecureRegistries>true</allowInsecureRegistries>
-                    <!--from节点用来设置镜像的基础镜像，相当于Docerkfile中的FROM关键字-->
-                    <from>
-                        <!--使用openjdk官方镜像，tag是 -->
-                        <!--<image>openjdk:11.0.6-jre-buster</image>-->
-                        <image>nexus3.ace.com:8082/openjdk:11.0.6-jre-buster</image>
-                    </from>
-                    <to>
-                        <!--镜像名称和tag，使用了mvn内置变量${project.version}，表示当前工程的version-->
-                        <image>${project.name}:latest</image>
-                    </to>
-
-                    <!--容器相关的属性-->
-                    <container>
-                        <entrypoint>
-                            <arg>/bin/sh</arg>
-                            <arg>-c</arg>
-                            <arg>java -Xms128M -Xmx256M -jar /ace/${project.name}/${project.name}.jar</arg>
-                        </entrypoint>
-                    </container>
-                    <extraDirectories>
-                        <paths>
-                            <path>src/main/jib</path>
-                            <path>target/jib</path>
-                        </paths>
-                    </extraDirectories>
-                </configuration>
             </plugin>
         </plugins>
     </build>
