--- a/ace-user-base-api/pom.xml
+++ b/ace-user-base-api/pom.xml
@@ -5,12 +5,20 @@
     <parent>
         <artifactId>ace-user-base-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ace-user-base-api</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-user-base-define</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-restful-base-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.ace</groupId>
             <artifactId>ace-fw</artifactId>
@@ -34,10 +42,6 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.ace</groupId>
-            <artifactId>ace-user-base-define</artifactId>
         </dependency>
     </dependencies>
 
