--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <parent>
         <artifactId>ace-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.3</version>
     </parent>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0.1</version>
     <description>
         用户基础功能模块
     </description>
@@ -16,14 +16,15 @@
     <artifactId>ace-user-base-projects</artifactId>
 
     <properties>
-        <ace.user.base.version>1.0-SNAPSHOT</ace.user.base.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <ace.fw.version>1.0.0.6</ace.fw.version>
     </properties>
     <modules>
         <module>ace-user-base-api</module>
         <module>ace-user-base-api-client-autoconfigure</module>
         <module>ace-user-base-api-web</module>
         <module>ace-user-base-define</module>
+        <module>ace-user-base-api-client-junit</module>
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -34,10 +35,104 @@
             </dependency>
             <dependency>
                 <groupId>org.ace</groupId>
+                <artifactId>ace-user-base-api-client-autoconfigure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
                 <artifactId>ace-user-base-define</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-ms-application</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-ms-application-autoconfigure</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-ms-discovery-server-autoconfigure</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-restful-base-api</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-restful-base-api-web</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-restful-base-api-web-mybatis-plus-autoconfigure</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-mybatis-plus-extension</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-data</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-log4j2-autoconfigure</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-mq</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ace</groupId>
+                <artifactId>ace-fw-web-api-client-starter</artifactId>
+                <version>${ace.fw.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
+    <build>
+        <plugins>
+            <!-- 统一更改版本  说明：http://www.lavecoral.me/archives/213.html -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+            <!-- 要将源码放上去，需要加入这个插件 -->
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
