--- a/ace-user-base-api-web/src/main/resources/application.properties
+++ b/ace-user-base-api-web/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=ace-user-base-api-web
-spring.profiles.include=datasource,mybatis,nacos-registry,tomcat,actuator
+spring.profiles.include=datasource,mybatis,nacos-registry,tomcat,actuator,jetcache,redis
