--- a/ace-user-base-api-web/pom.xml
+++ b/ace-user-base-api-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ace-user-base-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0.0.1</version>
+        <version>1.0.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ace-user-base-api-web</artifactId>
@@ -27,6 +27,10 @@
         <dependency>
             <groupId>org.ace</groupId>
             <artifactId>ace-fw-ms-application-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-jetcache-redisson-autoconfigure</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ace</groupId>
@@ -55,6 +59,10 @@
         <dependency>
             <groupId>org.ace</groupId>
             <artifactId>ace-fw-log4j2-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-redisson-autoconfigure</artifactId>
         </dependency>
 
         <dependency>
