--- a/ace-user-base-define/pom.xml
+++ b/ace-user-base-define/pom.xml
@@ -5,12 +5,16 @@
     <parent>
         <artifactId>ace-user-base-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0.0.1</version>
+        <version>1.0.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ace-user-base-define</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-common-base-define</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.ace</groupId>
             <artifactId>ace-fw</artifactId>
