--- a/ace-user-base-api-client-junit/src/main/resources/application.properties
+++ b/ace-user-base-api-client-junit/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=ace-user-base-api-client-junit
-spring.profiles.include=nacos-registry,tomcat,feign
+#服务分组 设置服务所处的分组
+spring.cloud.nacos.discovery.group=TEST_GROUP
