--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@
 /ace-user-base-api-client-autoconfigure/target/
 /ace-user-base-api-client-junit/target/
 /ace-user-base-define/target/
+/ace-user-base-api-web/target/
