--- a/ace-user-base-api-client-autoconfigure/pom.xml
+++ b/ace-user-base-api-client-autoconfigure/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ace-user-base-projects</artifactId>
         <groupId>org.ace</groupId>
-        <version>1.0.0.8</version>
+        <version>1.0.0.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,6 +15,10 @@
         <dependency>
             <groupId>org.ace</groupId>
             <artifactId>ace-user-base-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-fw-ms-feign-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 </project>
