--- a/ace-user-base-api-web/src/test/resources/application.properties
+++ b/ace-user-base-api-web/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ace-user-base-api-web
 spring.profiles.active=datasource,redis,jetcache,liquibase
-spring.cloud.nacos.discovery.enabled=false
+spring.cloud.nacos.discovery.enabled=true
 ace.ms.service.api.ace-user-base-api.url=http://localhost:8080
 #ace.redisson.default.enable=false
